Fonctionnel pas au point - Reste validation et processus validation et quelques détails